--- a/public/index.css
+++ b/public/index.css
@@ -3,7 +3,7 @@ html{
     box-sizing: border-box;
     font-size: calc(15px + 1vw);
 }
-*{
+html *{
     box-sizing: inherit;
 }
 body{
@@ -11,7 +11,6 @@ body{
     margin: 0;
     padding: 0;
     background-color: white;
-    color: #4e4e4e;
 }
 ul{
     list-style-type: none;
@@ -22,61 +21,51 @@ header{
     display: flex;
     align-items: center;
     font-size: 1rem;
-    font-family:monospace;
-    text-transform: uppercase;
+    font-family: monospace;
     margin: 0;
-    border-bottom: 2px solid #4e4e4e;
-    color: #2e2e2e;
-    padding: .1em;
+    border-bottom: 1px solid black;
+}
+header img{
+    margin: 0 1rem .5rem .5rem; 
+}
+header h1{
+    margin: 0;
 }
 
-header img{
-    margin: 0 1.5em .5em .5em; 
-}
-div.main{
-    font-size: 1.5rem;
-    padding: 1em 0;
-}
-div.main>p{
-    color: #650a0a;
-    font-family: monospace;
-    text-align: center;
-    margin-bottom: 1.5em;
-}
 form{
-    margin: .5em auto;
+    margin: 0 auto;
     position: relative;
     max-width: 750px;
 }
-
 input{
-    text-align: center;
-    font-size: 1.5rem;
-    padding: .1em .4em;
+    font-size: 1rem;
+    padding: .1em .8em;
     position: absolute;
     left: 0;
     width: 70%;
-    border: 2px solid #f44236;
+    border: 2px solid tomato;
     border-right: none;
     border-radius: 1em 0 0 1em;
 }
 button{
-    font-size: 1.5rem;
+    font-size: 1rem;
     padding: .1em .4em;
     color: white;
-    background-color: #f44236;
+    background-color: tomato;
     border-radius: 0 1em 1em 0;
-    border: 2px solid #f44236;
+    border: 2px solid tomato;
     border-left: none;
     position: absolute;
     left: 70%;
     width: 30%;
     cursor: pointer;
 }
-div.loader{
-    position: relative;
-    margin-top: 20px;
-}
+/* div.loader{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+} */
+
 div.loader div::before{
     content: " ";
     position: absolute;
@@ -99,54 +88,61 @@ div.loader div::after{
     background-color: white;
     border-radius: 50%;
 }
-
-h2.locationName{
-    color: #2e2e2e;
-    text-align: center;
-    font-size: 1.5rem;
+div.main{
+    margin: 10px 0 0;
 }
-div.data h4{
-    margin: 0;
-    display: inline;
+div.container{
+    display: flex;
+    width: 60vw;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 5px auto;
     font-size: 1rem;
-    color: #4e4e4e;
+}
+div.container>*{
+    margin: 2px 50px;
+}
+div.container .locationName{
+    width: 30%;
+    font-size: 1.5rem;
+    margin-right: 2em;
+    color: darkslategrey;
+}
+div.data{
+    background-color: #8b8b8b;
+    max-width: 100vw;
+    overflow: auto;
+    border-radius: .2em;
+    margin: auto;
 }
 div.data ul{
     display: flex;
-    justify-content: space-between;
-    overflow: auto;
-    padding: .1em;
+    padding: 0px 2px;
 }
-
 div.data ul li{
     display: inline-block;
-    flex: 50px 1 0;
-    margin-right: .2em; 
+    flex: 75px 1 0;
+    padding: 5px;
+    border-right: 2px solid black;
+    cursor: copy;
+}
+div.data ul li:hover{
+    background-color: #9b9b9b;
+}
+div.data ul li h4{
+    display: inline;
+    font-size: .6rem;
+    margin: 0 .4em;
+    color: #252525;
 }
 div.data ul li span{
-    color: black;
+    color: aliceblue;
+    font-size: 1.5rem;
+    margin-right:0.05em;
 }
-div.summary-container{
-    font-size: 2rem;
-    margin: 1em;
-}
-div.summary-container div.summary{
-    color: darkslategray;
-    font-size:2.5rem;
-    margin-bottom: .5em; 
-}
-div.summary-container span{
-    color: black;
-    font-size: 2.5rem;
-}
-
-
 .hide{
     display: none;
 }
-
-
-
 @keyframes rotate{
     from{
         transform: rotate(0deg);
