--- a/public/index.css
+++ b/public/index.css
@@ -10,27 +10,27 @@ body{
     margin: 0;
     padding: 0;
     background-color: white;
-    min-height: 1000vh;
+    
 }
 header{
     display: flex;
-    font-size: 1.5rem;
+    font-size: 1rem;
     text-transform: uppercase;
     margin: 0;
     background-color: #1f1d23;
-    color: #f9d7d7;
-    padding: 1em;
+    color: aliceblue;
+    padding: .5em;
 }
-header img{
-    height: 10vh;
-    width: 10vh;
-    border-radius: 50%;
-    margin: 0 1em; 
+
+header i{
+    font-size: 10vh;
+    color: white;
+    margin: 0 .2em; 
 }
 div.main{
     color: black;
     font-size: 2rem;
-    padding: 5em 1em 1em;
+    padding: 1em 1em 1em;
 }
 div.main>p{
     color: #650a0a;
@@ -45,6 +45,7 @@ form{
     min-height: 6rem;
 }
 input{
+    text-align: center;
     font-size: 2rem;
     padding: .4em;
     position: absolute;
@@ -66,6 +67,7 @@ button{
     left: 70%;
     width: 30%;
 }
-/* div.main button:focus{
-    border: 2px solid orange;
-} */
+div.search{
+    color: tomato;
+    font-weight: 100;
+}
