--- a/public/index.css
+++ b/public/index.css
@@ -108,40 +108,39 @@ div.container .locationName{
     margin-right: 2em;
     color: darkslategrey;
 }
-div.data{
-    background-color: #8b8b8b;
+   
+div.data ul{
+    background-color: #292828;
+    color: aliceblue;
     max-width: 100vw;
     overflow: auto;
     border-radius: .2em;
     margin: auto;
-}
-div.data ul{
     display: flex;
     padding: 0px 2px;
 }
 div.data ul li{
     display: inline-block;
+    padding-right: 20px;
     flex: 75px 1 0;
     padding: 5px;
-    border-right: 2px solid black;
-    cursor: copy;
-}
-div.data ul li:hover{
-    background-color: #9b9b9b;
+    border-right: 1px dashed aliceblue;
 }
 div.data ul li h4{
     display: inline;
     font-size: .6rem;
-    margin: 0 .4em;
-    color: #252525;
+    margin: 0 1em;
 }
 div.data ul li span{
-    color: aliceblue;
     font-size: 1.5rem;
-    margin-right:0.05em;
+    margin-left: 0.5em;
 }
 .hide{
     display: none;
+}
+#graph{
+    height: 500px;
+    min-width: 100vw;
 }
 @keyframes rotate{
     from{
