--- a/public/index.css
+++ b/public/index.css
@@ -147,11 +147,13 @@ div.locations{
 div.locations>div{
     display: inline-flex;
     flex-direction: column;
-    border: 1px solid black;
-    background-color: rgb(47, 47, 202);
-    padding: 1em 2em;
-    color: white;
-    border-radius: 1em;
+    justify-content: space-around;
+    min-height:25vh;
+    min-width: 25vh;
+    padding: 0 1em;
+    background-color: rgb(214, 73, 73);
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
     box-shadow: 2px 0 5px 0 #292828;
     transform: scale(.9);
     transition: all 100ms ease;
@@ -159,7 +161,7 @@ div.locations>div{
 }
 div.locations>div::after{
     content: "";
-    background-color: aliceblue;
+    background-color: rgb(250, 250, 250);
     height: 10px;
     width: 10px;
     border-radius: 50%;
