--- a/public/index.css
+++ b/public/index.css
@@ -159,6 +159,15 @@ div.locations>div{
     transition: all 100ms ease;
     position: relative;
 }
+div.locations>div.add{
+    background-color: white;
+    color: rgb(214, 73, 73);
+    text-align: center;
+    box-shadow: none;
+    border: 1px solid rgb(214, 73, 73);
+    transform: scale(1);
+}
+
 div.locations>div::after{
     content: "";
     background-color: rgb(250, 250, 250);
