--- a/public/index.css
+++ b/public/index.css
@@ -25,21 +25,21 @@ header{
     font-family: monospace;
     margin: 0;
     background-color: white;
-    border-bottom: 1px solid black;
+    
 }
 header img{
     margin: 0 1em 0 .5rem;
     flex: 0; 
     padding: .5em 1em .2em .2em;
-    border-right: 2px solid black;
 }
-form{
+
+form.special{
     flex: 1 1 0;
     margin: 1px;
     max-width: 60vw;
     position: relative;
 }
-input{
+form.special input{
     font-size: 1rem;
     padding: .1em .8em;
     width: 70%;
@@ -47,7 +47,7 @@ input{
     border-right: none;
     border-radius: 1em 0 0 1em;
 }
-button{
+form.special button{
     font-size: 1rem;
     padding: .1em .4em;
     color: white;
@@ -64,7 +64,7 @@ div.main{
     margin: 10px 0 0;
     position: relative;
 }
-/* div.loader div::before{
+div.loader div::before{
     content: " ";
     position: absolute;
     top: 100px;
@@ -85,7 +85,7 @@ div.loader div::after{
     width: 8vh;
     background-color: white;
     border-radius: 50%;
-} */
+}
 div.container{
     display: flex;
     justify-content: center;
@@ -132,9 +132,9 @@ div.data ul li span{
     font-size: 1.5rem;
     margin-left: 0.5em;
 }
-/* .hide{
+.hide{
     display: none;
-} */
+}
 #graph{
     height: 500px;
     min-width: 100vw;
@@ -195,4 +195,34 @@ div.locations>div div.footer h4{
     to{
         transform: rotate(360deg);
     }
+}
+
+form.addLoc-form{
+    margin: auto;  
+}
+form.addLoc-form input{
+    font-size: 1rem;
+    border: 1px solid rgb(214, 73, 73);
+    padding: .2em .4em;
+    
+}
+form.addLoc-form button{
+    font-size: 1rem;
+    padding: .2em .4em;
+    border: 1px solid rgb(214, 73, 73);
+    background-color: rgb(214, 73, 73);
+    color: white; 
+}
+div.tab{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+div.tab button{
+    border: 1px solid #292828;
+    background-color: #292828;
+    color: white;
+    font-size: .8rem;
+    padding: .4em 1em;
+    margin: 5px;
 }
