--- a/public/index.css
+++ b/public/index.css
@@ -60,10 +60,9 @@ form.special button{
     cursor: pointer;
 }
 div.main{
-    margin: 10px 0 0;
     position: relative;
 }
-div.loader div::before{
+/* div.loader div::before{
     content: " ";
     position: absolute;
     top: 100px;
@@ -84,12 +83,12 @@ div.loader div::after{
     width: 8vh;
     background-color: white;
     border-radius: 50%;
-}
+} */
 div.container{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 5px auto;
+    margin: 1px auto;
     font-size: 1rem;
     padding: 2em 2em;
 }
@@ -131,9 +130,9 @@ div.data ul li span{
     font-size: 1.5rem;
     margin-left: 0.5em;
 }
-.hide{
+/* .hide{
     display: none;
-}
+} */
 #graph{
     height: 500px;
     min-width: 100vw;
@@ -142,14 +141,15 @@ div.locations{
     margin-top: 2em;
     display: flex;
     justify-content: space-evenly;
+    align-items: baseline;
 }
 div.locations>div{
     display: inline-flex;
     flex-direction: column;
     justify-content: space-around;
-    min-height:25vh;
-    min-width: 25vh;
-    padding: 0 1em;
+    min-height:20vw;
+    min-width: 20vw;
+    padding: 0 .2em;
     background-color: rgb(214, 73, 73);
     color: rgb(255, 255, 255);
     border-radius: 5px;
@@ -158,15 +158,17 @@ div.locations>div{
     transition: all 100ms ease;
     position: relative;
 }
-div.locations>div.add{
+div.locations>span.add{
     background-color: white;
     color: rgb(214, 73, 73);
     text-align: center;
     box-shadow: none;
-    border: 1px solid rgb(214, 73, 73);
+    
     transform: scale(1);
 }
-
+div.locations>span.add>a{
+    padding: 10px;
+}
 div.locations>div::after{
     content: "";
     background-color: rgb(250, 250, 250);
