--- a/public/index.css
+++ b/public/index.css
@@ -62,7 +62,7 @@ form.special button{
 div.main{
     position: relative;
 }
-/* div.loader div::before{
+div.loader div::before{
     content: " ";
     position: absolute;
     top: 100px;
@@ -83,14 +83,14 @@ div.loader div::after{
     width: 8vh;
     background-color: white;
     border-radius: 50%;
-} */
+}
 div.container{
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 1px auto;
     font-size: 1rem;
-    padding: 2em 2em;
+    padding: 1em 2em;
 }
 div.container .locationName{
     flex: 0 0 50px;
@@ -130,18 +130,18 @@ div.data ul li span{
     font-size: 1.5rem;
     margin-left: 0.5em;
 }
-/* .hide{
+.hide{
     display: none;
-} */
+}
 #graph{
     height: 500px;
     min-width: 100vw;
 }
 div.locations{
-    margin-top: 2em;
+    margin: 2em 2vw;
     display: flex;
-    justify-content: space-evenly;
-    align-items: baseline;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 div.locations>div{
     display: inline-flex;
@@ -150,7 +150,7 @@ div.locations>div{
     min-height:20vw;
     min-width: 20vw;
     padding: 0 .2em;
-    background-color: rgb(214, 73, 73);
+    background-color: rgb(92, 157, 243);
     color: rgb(255, 255, 255);
     border-radius: 5px;
     box-shadow: 2px 0 5px 0 #292828;
@@ -158,17 +158,24 @@ div.locations>div{
     transition: all 100ms ease;
     position: relative;
 }
-div.locations>span.add{
+div.locations >div:nth-child(2n+1){
+    background-color: rgb(214, 73, 73);
+}
+div.locations>a.add{
+    display: inline-block;
     background-color: white;
     color: rgb(214, 73, 73);
     text-align: center;
     box-shadow: none;
-    
-    transform: scale(1);
+    min-height:20vw;
+    min-width: 20vw;
+    border: 1px solid rgb(214, 73, 73);
+    border-radius: 5px;
+    vertical-align: center;
+    padding-top: 8vw;
+    transform: scale(.9);
 }
-div.locations>span.add>a{
-    padding: 10px;
-}
+
 div.locations>div::after{
     content: "";
     background-color: rgb(250, 250, 250);
